# openqueryagent

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  new_adapter.yml
.github/workflows/: ci.yml
openqueryagent/: __init__.py
openqueryagent/adapters/: base.py  chroma.py  chroma_filters.py  elasticsearch.py  elasticsearch_filters.py  milvus.py  milvus_filters.py  pgvector.py  pgvector_filters.py  pinecone.py  pinecone_filters.py  qdrant.py  qdrant_filters.py  s3vectors.py  s3vectors_filters.py  weaviate.py  weaviate_filters.py
openqueryagent/core/: __init__.py  agent.py  circuit_breaker.py  config.py  exceptions.py  executor.py  filters.py  memory.py  planner.py  plugins.py  reranker.py  router.py  rule_planner.py  schema.py  synthesizer.py  types.py
openqueryagent/embeddings/: base.py  bedrock.py  cohere.py  huggingface.py  openai.py
openqueryagent/llm/: anthropic.py  base.py  bedrock.py  minimax.py  ollama.py  openai.py
openqueryagent/observability/: __init__.py  metrics.py  tracing.py
openqueryagent/server/: __init__.py  __main__.py  api.py  config.py  dependencies.py  mcp_server.py  middleware.py  models.py  websocket.py
tests/: test_adapters.py  test_agent.py  test_chroma_adapter.py  test_circuit_breaker.py  test_compilers.py  test_config.py  test_elasticsearch_adapter.py  test_embeddings.py  test_exceptions.py  test_executor.py  test_filters.py  test_llm_providers.py  test_mcp_server.py  test_memory.py  test_metrics.py  test_minimax_provider.py  test_pinecone_adapter.py  test_planner.py  test_plugins.py  test_protocols.py  test_providers.py  test_reranker.py  test_router.py  test_rule_planner.py  test_s3vectors_adapter.py  test_schema.py  test_server.py  test_server_middleware.py  test_synthesizer.py  test_tracing.py  test_types.py  test_weaviate_adapter.py
